# zoomanager

./: pyproject.toml
migrations/: env.py
src/: .env  main.py
src/config/: settings.py
src/core/dtos/: auth_dto.py  user_dto.py  zoo_dto.py
src/core/interactors/: animals_interactors.py  users_interactors.py
src/core/models/: models.py  session_factory.py
src/core/repositories/: animals_repository.py  repository.py  uow.py  user_repository.py
src/core/routers/: animals.py  users.py
src/core/services/: animals_service.py  auth_service.py  users_service.py
src/core/use_cases/: animal_use_cases.py  user_use_cases.py
src/core/utils/: jwt_handler.py
